--- a/week-7/game.css
+++ b/week-7/game.css
@@ -8,11 +8,11 @@ body{
 	height: 50%;
 	border: 1px solid black;
 	background-image: url("background.jpg");
-	background-size: 900px 300px;
+	background-size: 100% 100%;
 	background-repeat: no-repeat;
 }
 #hero {
-	position:absolute; top:309px;
+	position:absolute; top:300px;
 	width: 20px;
 	height: 20px;
 	background-image: url("game-imgs/Boomer.png");
@@ -31,4 +31,10 @@ body{
 @keyframes kick {
 	from { background-position: 69px 362px; }
 	to { background-position: 47px 362px; }
+}
+p {
+	font-size: 10px;
+}
+progress {
+	border: 1px solid black;
 }
