--- a/week-7/game.css
+++ b/week-7/game.css
@@ -3,11 +3,6 @@ body{
 	width: 95vw;
 	height: 95vh;
 }
-/*
-canvas {
-	border:1px solid black;
-}
-*/
 .level {
 	width: 90%;
 	height: 50%;
@@ -45,6 +40,14 @@ canvas {
 	50%{ background-image: url("game-imgs/stick-walk-02.jpg"); }
 	100%{ background-image: url("game-imgs/stick-walk-03.jpg"); }
 }
+.walkleft {
+	animation: walkleft steps(3) 0.55s infinite;
+}
+@keyframes walkleft {
+	0%{ background-image: url("game-imgs/stick-walk-11.jpg"); }
+	50%{ background-image: url("game-imgs/stick-walk-12.jpg"); }
+	100%{ background-image: url("game-imgs/stick-walk-13.jpg"); }
+}
 .punch {
 	animation: punch steps(3) 0.55s infinite;
 }
@@ -60,6 +63,14 @@ canvas {
 	0%{ background-image: url("game-imgs/stick-kick-01.jpg"); }
 	50%{ background-image: url("game-imgs/stick-kick-02.jpg"); }
 	100%{ background-image: url("game-imgs/stick-kick-03.jpg"); }
+}
+.sword {
+	animation: sword steps(3) 0.55s infinite;
+}
+@keyframes sword {
+	0%{ background-image: url("game-imgs/stick-sword-01.jpg"); }
+	50%{ background-image: url("game-imgs/stick-sword-02.jpg"); }
+	100%{ background-image: url("game-imgs/stick-sword-03.jpg"); }
 }
 p {
 	font-size: 10px;
